--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.1",
     "sweetalert2": "^11.14.3"
   },
   "devDependencies": {
